# stixmagic-bot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  INTEGRATION_PLAN.md  LICENSE  README.md  api.py  main.py  menus.py  openai_helper.py  pyproject.toml  replit.md  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
domain/: __init__.py  media.py
infra/: __init__.py  db.py
pull_requests/9/: comment.md
static/: api.html  index.html  miniapp.html
