[tool.poetry]
name = "sticker-lab-bot"
version = "1.0.0"
description = "Telegram sticker pack creation and management bot with Mini App support"
authors = ["PupFr <aroo@pupfrisky.com>"]
readme = "MINIAPP_TEMPLATE.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.0.1"
pillow = "^12.1.1"
requests = "^2.32.5"
telegram = "^0.0.1"
flask = "^3.1.3"
openai = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
