[tool.poetry]
name = "stixmagic"
version = "1.0.0"
description = "Stix Magic – Telegram sticker alchemy platform and bot ecosystem"
authors = ["PupFr <aroo@pupfrisky.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.0.1"
pillow = "^12.1.1"
requests = "^2.32.5"
telegram = "^0.0.1"
flask = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
